kubernetes/apps/glance/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.pxldi.de`)
      kind: Rule
      services:
        - name: glance
          port: 8080
      middlewares:
        - name: authentik-forward-auth
          namespace: traefik
